# Starlight-Terrain

./: CMakeLists.txt  README.md
cmake/: starlight_terrainConfig.cmake.in
include/star_terrain/: TerrainInfoFile.hpp
include/star_terrain/file_data/: ChunkInfo.hpp  CoverageInfo_json.hpp  TextureDataInfo.hpp  TextureDataInfo_json.hpp
include/star_terrain/file_data/coverage_info/: CoverageInfo.hpp
include/star_terrain/file_data/terrain_info/: Reader.hpp  TerrainInfo.hpp  TerrainInfo_json.hpp
include/star_terrain/file_data/texture_data/: Reader.hpp
include/star_terrain/file_data/texture_data_info/: Reader.hpp  TextureDataInfo.hpp
include/star_terrain/io/: ReadResult.hpp  TerrainInfo.hpp  TerrainShapeInfoLoader.hpp
include/star_terrain/layout/: TerrainGrid.hpp
include/star_terrain/rendering/: FromTerrainDirLoader.hpp  TerrainObject.hpp  TerrainObjectDefinition.hpp  TerrainRenderingType.hpp
include/star_terrain/serialization/: ChunkInfo_json.hpp
include/star_terrain/struct/: ChunkInfo.hpp  MeshInfo.hpp  TerrainInfo.hpp
include/star_terrain/threading_wrapper/terrain_chunk/: TerrainChunkProcessor.hpp
include/star_terrain/util/: Distance.hpp
src/star_terrain/file_data/: ChunkInfo_json.cpp  CoverageInfo_json.cpp  TextureDataInfo_json.cpp
src/star_terrain/file_data/chunk_info/: ChunkInfo_json.cpp
src/star_terrain/file_data/coverage_info/: CoverageInfo_json.cpp
src/star_terrain/file_data/terrain_info/: Reader.cpp  TerrainInfo_json.cpp
src/star_terrain/file_data/texture_data/: Reader.cpp
src/star_terrain/file_data/texture_data_info/: Reader.cpp  TextureDataInfo_json.cpp
src/star_terrain/io/: TerrainInfo.cpp  TerrainShapeInfoLoader.cpp
src/star_terrain/layout/: TerrainGrid.cpp
src/star_terrain/rendering/: FromTerrainDirLoader.cpp  TerrainObject.cpp
src/star_terrain/serialization/: ChunkInfo_json.cpp  TerrainInfo_json.cpp
src/star_terrain/threading_wrapper/terrain_chunk/: TerrainChunkProcessor.cpp
src/star_terrain/util/: Distance.cpp
